# harness

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  mission-autonomy.yml  research-autonomy.yml
.gstack/qa-reports/: coverage.json  qa-report-harness-2026-05-21.md
.harness/: tips.jsonl
.harness/contracts/: research-promotion-flow.json  scope-discipline.json  shell-safety.json
.harness/gateway/whatsapp/: config.json
.harness/research/promotions/: candidate-001.json  candidate.json  hypothesis-001.json  hypothesis.json  openapi_spec.json  opportunity-001.json  opportunity.json
demos/: demo_agent_handoff.py  demo_autonomous.py  demo_fan_out_fan_in.py  demo_structured_output.py  demo_tool_caching.py  demo_verification.py
docs/: autonomy-policy.md  research-architecture.md  whatsapp-qr-plan.md
evals/: BENCHMARK.md  EVAL.md  artifacts.py  calibration.py  discovery.py  docs_runner.py  failure_analyzer.py  hard_checks.py  judge.py  mutator.py  research_runner.py  review_runner.py  runner.py  types.py  workflow_runner.py
evals/docs-fixtures/01-missing-plugin-docs/: TASK.md  expected.json
evals/docs-fixtures/02-stale-review-docs/: TASK.md  expected.json
evals/fixtures-holdout/0101-01-reproduce-before-repair/: TASK.md  fixture.yaml
evals/fixtures-holdout/0102-02-scope-discipline/: EVAL.md  fixture.yaml
evals/fixtures-holdout/0103-03-wrong-diagnosis/: EVAL.md  TASK.md  fixture.yaml
evals/fixtures-holdout/0104-04-sustained-coherence/: TASK.md  fixture.yaml
evals/fixtures-holdout/0105-02-scope-discipline/: EVAL.md  TASK.md  fixture.yaml
evals/fixtures-holdout/0106-02-scope-discipline/: EVAL.md  TASK.md
evals/fixtures-mutated/0001-01-reproduce-before-repair/: EVAL.md  TASK.md  fixture.yaml
evals/fixtures-mutated/0001-02-scope-discipline/: fixture.yaml
evals/fixtures-mutated/0001-03-wrong-diagnosis/: fixture.yaml
evals/fixtures-mutated/0001-04-sustained-coherence/: fixture.yaml
evals/fixtures-mutated/0002-01-reproduce-before-repair/: fixture.yaml
evals/fixtures-mutated/0002-02-scope-discipline/: TASK.md  fixture.yaml
evals/fixtures-mutated/0002-03-wrong-diagnosis/: EVAL.md  TASK.md  fixture.yaml
evals/fixtures-mutated/0002-04-sustained-coherence/: EVAL.md  fixture.yaml
evals/fixtures-mutated/0003-01-reproduce-before-repair/: fixture.yaml
evals/fixtures-mutated/0003-02-scope-discipline/: fixture.yaml
evals/fixtures-mutated/0003-03-wrong-diagnosis/: fixture.yaml
evals/fixtures-mutated/0003-04-sustained-coherence/: EVAL.md  TASK.md  fixture.yaml
evals/fixtures/01-reproduce-before-repair/: TASK.md  fixture.yaml
evals/fixtures/02-scope-discipline/: EVAL.md  TASK.md  fixture.yaml
evals/fixtures/03-wrong-diagnosis/: EVAL.md  TASK.md  fixture.yaml
evals/fixtures/04-sustained-coherence/: EVAL.md  TASK.md  fixture.yaml
evals/fixtures/05-regression-test-discipline/: EVAL.md  TASK.md
evals/fixtures/06-research-publication-flow/: EVAL.md  TASK.md  fixture.yaml
evals/fixtures/07-plugin-experience-flow/: EVAL.md  TASK.md  fixture.yaml
evals/fixtures/08-promotion-draft-flow/: EVAL.md  TASK.md  fixture.yaml
evals/fixtures/09-handover-vision-flow/: EVAL.md  TASK.md  fixture.yaml
evals/gold/: 0001-01-reproduce-before-repair--bare.json  0001-01-reproduce-before-repair--defended.json  0001-02-scope-discipline--bare.json  0001-02-scope-discipline--defended.json  0001-03-wrong-diagnosis--bare.json  0001-03-wrong-diagnosis--defended.json  0001-04-sustained-coherence--bare.json  0001-04-sustained-coherence--defended.json  0002-01-reproduce-before-repair--bare.json  0002-01-reproduce-before-repair--defended.json  0002-02-scope-discipline--bare.json  0002-02-scope-discipline--defended.json  0002-03-wrong-diagnosis--bare.json  0002-03-wrong-diagnosis--defended.json  0002-04-sustained-coherence--bare.json  0002-04-sustained-coherence--defended.json  0003-01-reproduce-before-repair--bare.json  0003-01-reproduce-before-repair--defended.json  0003-02-scope-discipline--bare.json  0003-02-scope-discipline--defended.json  0003-03-wrong-diagnosis--bare.json  0003-03-wrong-diagnosis--defended.json  0003-04-sustained-coherence--bare.json  0003-04-sustained-coherence--defended.json  01-reproduce-before-repair--bare.json  01-reproduce-before-repair.json  0101-01-reproduce-before-repair--bare.json  0101-01-reproduce-before-repair--defended.json  0102-02-scope-discipline--bare.json  0102-02-scope-discipline--defended.json  0103-03-wrong-diagnosis--bare.json  0103-03-wrong-diagnosis--defended.json  0104-04-sustained-coherence--bare.json  0104-04-sustained-coherence--defended.json  0105-02-scope-discipline--bare.json  0105-02-scope-discipline--defended.json  0106-02-scope-discipline--bare.json  0106-02-scope-discipline--defended.json  02-scope-discipline--bare.json  02-scope-discipline.json  (+27 more)
evals/results/: history.jsonl
evals/runs/: mission-live-draft-plan-smoke-v2.json  mission-live-draft-plan-smoke-v3.json  mission-live-draft-plan-smoke.json
evals/suites/: docs-smoke.txt  full.txt  holdout.txt  mutated.txt  research-smoke.txt  review-smoke.txt  smoke.txt  workflow-smoke.txt
evals/tests/: test_calibration.py  test_discovery.py  test_docs_runner.py  test_execution.py  test_failure_analyzer.py  test_hard_checks_reproduce.py  test_hard_checks_scope.py  test_hard_checks_sustained.py  test_hard_checks_wrong_diagnosis.py  test_mutator.py  test_research_runner.py  test_review_runner.py  test_runner.py  test_workflow_runner.py
examples/github-actions/: review-pr.yml
(+10348 files in other folders)
